--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+/* Custom scrollbar for WebKit-based browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #0d47a1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #0d47a1;
+  border-radius: 10px;
+  border: 3px solid #f1f1f1; /* Optional: Add a border for a more modern look */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background:#0d47a1;
+}
+
+/* Firefox scrollbar styles */
+* {
+  scrollbar-width: thin;          /* Make the scrollbar thin */
+  scrollbar-color: #0d47a1 #f1f1f1;  /* Thumb and track color */
 }
